clusters/hybrid01/config/grafana/grafana-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
  annotations:
    configmap.reloader.stakater.com/reload: "grafana-dashboards-json"
spec:
  replicas: 1
  priorityClassName: monitoring
  securityContext: 
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://openbao.openbao.svc.cluster.local:8200" # optional, the address of the Vault service, default values is https://vault:8200
        vault.security.banzaicloud.io/vault-role: "grafana" # optional, the default value is the name of the ServiceAccount the Pod runs in, in case of Secrets and ConfigMaps it is "default"
        vault.security.banzaicloud.io/run-as-non-root: "true"
    spec:
      hostUsers: false
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      containers:
      - name: grafana
        image: grafana/grafana:13.2.3
        securityContext: 
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 15m
            memory: 500M
          limits:
            memory: 750M
        volumeMounts:
        # - name: grafana-data
        #   mountPath: /var/lib/grafana
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-dashboards-provisioning
          mountPath: /etc/grafana/provisioning/dashboards
        - name: grafana-dashboards-json
          mountPath: /dashboards/main
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: tmp
          mountPath: /tmp
        - name: grafana-data
          mountPath: /usr/share/grafana/data
        ports:
          - name: grafana
            protocol: TCP
            containerPort: 3000
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
      volumes:
      # - name: grafana-data
      #   persistentVolumeClaim:
      #     claimName: grafana
      - name: grafana-datasources
        configMap:
          name: grafana-datasources
      - name: grafana-dashboards-provisioning
        configMap:
          name: grafana-dashboards
      - name: grafana-dashboards-json
        configMap:
          name: grafana-dashboards-json
      - name: grafana-storage
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: grafana-data
        emptyDir: {}
