clusters/hybrid01/config/grafana/grafana-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-external
  namespace: grafana
spec:
  hosts:
  - "grafana.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
